<resources>
    <string name="app_name">Ansar Group</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="timeout_error_message">There is a server problem, please try again</string>
    <string name="generic_unknown_error">Technical Issue Occurred</string>

    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_adding">Adding</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">Add</string>
    <string name="select_service_category"><![CDATA[Select Your service category & profession]]></string>
    <string name="some_thing_error">Something went wrong</string>

    <string name="title_general_information">General Information</string>
    <string name="how_people_reach_you">How people may reach you?</string>
    <string name="in_person">In-Person</string>
    <string name="online_coming_soon">Online (coming soon)</string>
    <string name="in_person_hint">Your sevices are presented locally, People will either come to your store or meet you in thire own places</string>
    <string name="how_make_appointment">How to make appointment with you?</string>
    <string name="book_time">Book a time</string>
    <string name="drop_in">Drop In</string>
    <string name="next">Next</string>
    <string name="book_time_hint">No need for pre-registeration, perople can stop by your business at any of the avaiable times.</string>
    <string name="drop_in_hint">Set a work schdule and people will need to book any of the avaiable time slots to meet you</string>
    <string name="back">Back</string>

</resources>