<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_appointments"
        android:icon="@drawable/ic_calendar_today_24"
        android:title="@string/title_appointments" />

    <item
        android:id="@+id/navigation_adding"
        android:icon="@drawable/ic_add_circle_24"
        android:title="@string/title_adding" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

</menu>