<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ansargroup.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.ansargroup.main.appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/navigation_adding"
        android:name="com.ansargroup.main.adding.AddingFragment"
        android:label="@string/title_adding"
        tools:layout="@layout/fragment_adding">
        <action
            android:id="@+id/action_add"
            app:destination="@id/destination_select_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ansargroup.main.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ansargroup.main.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/destination_select_category"
        android:name="com.ansargroup.add.selectcategory.presentation.SelectCategoryFragment"
        android:label="@string/title_adding"
        tools:layout="@layout/fragment_select_category">
        <action
            android:id="@+id/action_add_general_information"
            app:destination="@id/destination_add_general_information" />
    </fragment>

    <fragment
        android:id="@+id/destination_add_general_information"
        android:name="com.ansargroup.add.generalinformation.presentation.AddGeneralInformationFragment"
        android:label="@string/title_general_information"
        tools:layout="@layout/fragment_select_category">
        <argument
            android:name="parentId"
            app:argType="string" />
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>